# Project_ETL

./: Project_ETL.opam  Project_Report.md  README.md  dune-project  project_log.txt  run_etl.sh  type_Csv_parser.html
data_out/: example.csv  out.csv
dune.lock/: lock.dune
lib/: csv_helper.ml  csv_helper.mli  csv_parser.ml  csv_parser.mli  csv_processor.ml  csv_processor.mli  csv_reader.ml  csv_reader.mli  csv_writer.ml  csv_writer.mli  dune  filter.ml  filter.mli  processor.ml  processor.mli
test/: dune  test_csv_helper.ml  test_csv_parser.ml  test_filter_orders.ml  test_process_orders.ml
