(library
 (name csv_reader)
 (modules csv_reader)
 (libraries csv))

(library
 (name csv_helper)
 (modules csv_helper)
 (libraries csv))

(library
 (name filter)
 (modules filter)
 (libraries csv_helper))

(library
 (name processor)
 (modules processor)
 (libraries csv_helper))

(library
 (name csv_writer)
 (modules csv_writer)
 (libraries csv processor))

